[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/clutters/clutter_item.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="ClutterItem" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -512.0
margin_bottom = -300.0
script = ExtResource( 1 )

[node name="Sprite" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -65.0
margin_right = -1.0
margin_bottom = -1.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
expand = true

[connection signal="gui_input" from="Sprite" to="." method="_on_Sprite_gui_input"]
[connection signal="mouse_entered" from="Sprite" to="." method="_on_Sprite_mouse_entered"]
[connection signal="mouse_exited" from="Sprite" to="." method="_on_Sprite_mouse_exited"]
